# FCUP-FEUP

./: README.md
1ºano/1ºsemestre/Introdução aos Computadores/: Folha 3.docx  Introdução aos computadores.docx  Matéria de IC.docx  bash_examples.sh
1ºano/1ºsemestre/Introdução aos Computadores/Exame/: resolucaoExameIC.txt
1ºano/1ºsemestre/Introdução aos Computadores/praticas/: folha3  texto.sh  texto.txt
1ºano/1ºsemestre/PI_CC1003/: README.md  RelacoesBinarias.c
1ºano/1ºsemestre/PI_CC1003/Mooshak2/: A.c  B.c  C.c  D.c  F.c  H.c
1ºano/1ºsemestre/PI_CC1003/Mooshak3/: A.c  B.c  C.c  F.c  G.c
1ºano/1ºsemestre/PI_CC1003/Mooshak4/: A.c  B.c  C.c  D.c  D0.c  E.c  F.c  G.c  H.c  H0.c  I.c  J.c  K.c
1ºano/1ºsemestre/PI_CC1003/Mooshak5/: A.c  B.c  C.c
1ºano/1ºsemestre/PI_CC1003/aula1/: first  first.c  soma.c
1ºano/1ºsemestre/PI_CC1003/aula2/: exercício10.c  exercício11.c  exercício1a.c  exercício1b.c  exercício2.c  exercício3.c  exercício4.c  exercício5.c  exercício6.c  exercício7.c  exercício8.c  exercício9a.c  exercício9b.c
1ºano/1ºsemestre/PI_CC1003/aula3/: exercício1a.c  exercício1b.c  exercício2a1.c  exercício2a3.c  exercício2b.c  exercício2c.c  exercício3a.c  exercício3b.c
1ºano/1ºsemestre/PI_CC1003/aula4/: exercícioA.c  exercícioE.c  exercícioF.c
1ºano/1ºsemestre/PI_CC1003/aula5/: exercício1.c  exercício2.c  exercício3.c
1ºano/1ºsemestre/PI_CC1003/aula6/: exercício1.c
1ºano/1ºsemestre/PI_CC1003/aula7/: ex1.c
1ºano/2ºsemestre/Calculo II/: README.md
1ºano/2ºsemestre/Comunicação Técnica/: Artigo.docx
1ºano/2ºsemestre/Estruturas de Dados/: Listas Ligadas.odg  README.md
1ºano/2ºsemestre/Programação Funcional/: README.md  helloWorld.hs
2ºano/1ºsemestre/Arquitetura de Computadores/: README.md
2ºano/1ºsemestre/Física II/: README.md
2ºano/1ºsemestre/LDTS/: README.md
2ºano/1ºsemestre/Programação/aula5/: CMakeLists.txt  ex2  ex2.cpp  ex2.h  ex3  ex3.cpp  ex3.h  ex4.cpp  ex4.h  ex5.cpp  ex5.h  ex6.cpp  ex6.h  ex7.cpp  ex7.h  ex8.cpp  ex8.h  ex9.cpp  ex9.h  hello.cpp
2ºano/1ºsemestre/Programação/aula6e7/: CMakeLists.txt
2ºano/1ºsemestre/Programação/aula6e7/src/: a.out  ex1.cpp  ex21.cpp  ex22.cpp  ex23.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex7.cpp  output.txt
2ºano/1ºsemestre/Programação/prog_p4/: CMakeLists.txt  covtest.sh
2ºano/1ºsemestre/Programação/prog_p4/src/: funcs.c  funcs.h  stack.c  stack.h  test_days_in_month.cpp  test_exp_taylor.cpp  test_hexstr_convert.cpp  test_stack.cpp
2ºano/1ºsemestre/Programação/progp1/: .cpack_ignore  CMakeLists.txt
2ºano/1ºsemestre/Programação/progp1/data/scripts/: add4.txt  blank1.txt  blank2.txt  blank3.txt  extra2.txt  extra3.txt  extra5.txt  gray1.txt  gray2.txt  gray3.txt  mix1.txt  mix2.txt  mix3.txt  mix4.txt  mix5.txt  mix6.txt  open_save1.txt  open_save2.txt  rotate1.txt  rotate2.txt  rotate3.txt  rotate4.txt  rotate5.txt  rotate6.txt  rotate7.txt  rotate8.txt
2ºano/1ºsemestre/Programação/progp1/png/: png.cpp  png.hpp
2ºano/1ºsemestre/Programação/progp1/programs/: image_diff.cpp  image_dump.cpp  run_script.cpp
2ºano/1ºsemestre/Programação/progp1/rgb/: rgb.hpp  script.cpp  script.hpp
2ºano/1ºsemestre/Programação/progp1/test/: color_test.cpp  image_test.cpp  script_test.cpp
2ºano/1ºsemestre/Programação/progp2/: CMakeLists.txt  README.md
2ºano/1ºsemestre/Programação/progp2/programs/: convert.cpp  png_diff.cpp  png_dump.cpp  xmltest.cpp
2ºano/1ºsemestre/Programação/progp2/svg/: color.hpp  elements.cpp  elements.hpp  png_image.cpp  png_image.hpp  point.hpp  shape.cpp  shape.hpp  svg.hpp  svg_to_png.cpp  svg_to_png.hpp
2ºano/1ºsemestre/Programação/progp2/test/: test.hpp  test_ellipse.cpp  test_group.cpp  test_polygon.cpp  test_polyline.cpp  test_transform.cpp  test_use.cpp
2ºano/2ºsemestre/Desenho de Algoritmos/: README.md  folha4.txt
2ºano/2ºsemestre/Desenho de Algoritmos/DA_TP_Classes/: CMakeLists.txt
2ºano/2ºsemestre/Desenho de Algoritmos/DA_TP_Classes/TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  exercises.h
2ºano/2ºsemestre/Desenho de Algoritmos/DA_TP_Classes/TP2a/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  exercises.h
2ºano/2ºsemestre/Desenho de Algoritmos/DA_TP_Classes/TP2b/: Pontos10k  Pontos128k  Pontos16k  Pontos1k  Pontos32k  Pontos64  Pontos64k  Pontos8  ex1.cpp  ex2.cpp  exercises.h
2ºano/2ºsemestre/Desenho de Algoritmos/DA_TP_Classes/TP3a/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  exercises.h
2ºano/2ºsemestre/Desenho de Algoritmos/DA_TP_Classes/TP3b/: Graph.h  MutablePriorityQueue.h  TestAux.cpp  TestAux.h  ex1.cpp  ex2.cpp
2ºano/2ºsemestre/Engenharia de Software/: README.md  mockup.docx
2ºano/2ºsemestre/Física I/: README.md
2ºano/2ºsemestre/IADExcel/: Exemplos_Folha_de_Calculo_101_A.xlsm  amostraQuizFormulas.xlsx
2ºano/2ºsemestre/Linguagens e Tecnologias Web/: 26012017.txt  README.md  exercicio.css  exercicio.html
2ºano/2ºsemestre/Sistemas Operativos/: README.md  Teste1_SO.docx  Teste2_Cap8_SO.docx
3ºano/1ºsemestre/Competições de Swarm Robotics/: Copia_de_swarm_agents.ipynb
3ºano/1ºsemestre/Fundamentos de Segurança Informática/: FSI_teste1.docx  README.md  fsi_teste2_resumo.txt
3ºano/1ºsemestre/Redes de Computadores/: README.md
3ºano/2ºsemestre/Compiladores/: README.md
3ºano/2ºsemestre/Computação Paralela e Distribuída/: README.md
3ºano/2ºsemestre/Inteligência Artificial/: Exercises_AI1_SearchFormulation_Notebook_.ipynb  Exercises_AI1b_InformedSearch_Notebook_ToComplete.ipynb  README.md  algorithms.docx  optimization.docx  state_space.drawio
4ºano/1ºsemestre/Administração de Redes/: IMG_3632.HEIC
4ºano/1ºsemestre/Administração de Sistemas/: README.md
4ºano/1ºsemestre/Data Mining I/: README.md
4ºano/1ºsemestre/Segurança de Redes/: Network Security.md  README.md
4ºano/1ºsemestre/Visão Computacional/: README.md
4ºano/2ºsemestre/Big Data e Cloud Computing/: README.md
4ºano/2ºsemestre/Data Mining II/: README.md
4ºano/2ºsemestre/Segurança de Sistemas e Dados/: README.md
4ºano/2ºsemestre/Tópicos Avançados em Redes/: README.md
5ºano/1ºsemestre/Gestão e Empreendedorismo/: GE-AnFin-B-DR-Aula.xls
(+651 files in other folders)
